# C-_CMAKE_Trainning

./: README.md
wordmachine/: CMakeLists.txt  build.sh  main.cpp
wordmachine/inc/: operations.hpp  wordmachine.hpp
wordmachine/src/: operations.cpp  wordmachine.cpp
wordmachine/wordStrategy/: CMakeLists.txt  main.cpp  wordStrategy.cpp  wordStrategy.hpp
